# high-perf-log-monitor

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/logmonitor/: chunk_pool.hpp  log_monitor.hpp  log_reader.hpp  pattern_matcher.hpp  thread_safe_queue.hpp  types.hpp
src/: CMakeLists.txt  log_monitor.cpp  log_reader.cpp  pattern_matcher.cpp
tests/: CMakeLists.txt  test_chunk_pool.cpp  test_log_reader.cpp  test_pattern_matcher.cpp  test_thread_safe_queue.cpp
tools/: generate_log.py
